--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "635website",
+  "name": "chefsoul",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "homepage": "chefsoul.uk",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
